--- a/assets/styles/sass/_book.scss
+++ b/assets/styles/sass/_book.scss
@@ -5,17 +5,23 @@ article.book{
 
     @media(prefers-color-scheme: light){
 
-        border: solid 2px $red;
+        border-bottom: solid 2px $red;
+        border-right: solid 2px $red;
+        border-top: solid 1px $red;
+        border-left: solid 1px $red;
         background-color: $almond;
         color: black;
-        box-shadow: 0 4px 4px 0 $red;
+        box-shadow: 4px 4px 4px 0 $red;
     }
 
     @media(prefers-color-scheme: dark){
 
-        border: solid 2px $darkThemeRed;
+        border-bottom: solid 2px $darkThemeRed;
+        border-right: solid 2px $darkThemeRed;
+        border-top: solid 1px $darkThemeRed;
+        border-left: solid 1px $darkThemeRed;
         color: $almond;
-        box-shadow: 0 4px 4px 0 $darkThemeRed;
+        box-shadow: 4px 4px 4px 0 $darkThemeRed;
     }
 
 
