--- a/assets/styles/sass/_home-page.scss
+++ b/assets/styles/sass/_home-page.scss
@@ -15,23 +15,14 @@
                 display:grid;
                 grid-template-columns: repeat(3, 1fr);
                 padding-top: 10vh;
-                grid-row-gap:5vh;
+                grid-row-gap:2vh;
 
                 &>h4 {
                     grid-column:1/4;
-                    font-size: 2.5rem;
+                    font-size: 2rem;
                     text-transform:uppercase;
-                    margin-bottom:3vh;
+                    padding-bottom:3vh;
                     font-weight:bold;
-                    padding-bottom: .5vh;
-
-                    @media (prefers-color-scheme: light){
-                    border-bottom: 2px solid $red;
-                    }
-                    @media (prefers-color-scheme: dark){
-                    border-bottom: 2px solid $darkThemeRed;
-                    }
-
                 }
 
                 & > .book {
