--- a/assets/styles/sass/_home-page.scss
+++ b/assets/styles/sass/_home-page.scss
@@ -30,6 +30,12 @@
                     align-self:center;
                     justify-self:center;
                 }
+
+                & > .team-member {
+                    width:70%;
+                    align-self:center;
+                    justify-self:center;
+                }
             }
 
             &:first-of-type {
