--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -90,6 +90,133 @@ table {
 /******************** SECTIONS ********************/
 /******************** SECTIONS ********************/
 /******************** SECTIONS ********************/
+.header-book {
+  display: grid;
+  grid-template-columns: 1fr 2fr 4fr 2fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 100%;
+  min-height: 15vh;
+}
+@media (prefers-color-scheme: light) {
+  .header-book {
+    background-color: #fdebde;
+    box-shadow: 0px 2px 2px rgba(136, 18, 18, 0.5);
+  }
+  .header-book a {
+    color: rgba(0, 0, 0, 0.9);
+  }
+  .header-book a:hover {
+    color: #881212;
+  }
+  .header-book .dark-logo {
+    display: none;
+  }
+  .header-book nav a:hover {
+    border-bottom: solid 4px rgba(136, 18, 18, 0.7);
+    border-right: solid 5px rgba(136, 18, 18, 0.7);
+    border-top: solid 1px rgba(136, 18, 18, 0.1);
+    border-left: solid 1px rgba(136, 18, 18, 0.1);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .header-book {
+    box-shadow: 0px 2px 2px rgb(194, 43, 43);
+  }
+  .header-book a {
+    color: #fdebde;
+  }
+  .header-book a:hover {
+    color: #fdebde;
+  }
+  .header-book .light-logo {
+    display: none;
+  }
+  .header-book nav a:hover {
+    border-bottom: solid 4px #c22b2b;
+    border-right: solid 4px #c22b2b;
+  }
+}
+
+body > header > figure {
+  padding-left: 2vw;
+  grid-column: 2/3;
+  grid-row: 1/4;
+  max-height: 15vh;
+}
+
+body > header > figure > img {
+  height: 100%;
+}
+
+body > header > nav {
+  grid-column: 3/4;
+  display: flex;
+  flex-direction: space-evenly;
+  align-items: center;
+  justify-content: center;
+  grid-row: 2/3;
+}
+
+body > header > nav > ul {
+  display: flex;
+}
+
+body > header > nav > ul > li {
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+body > header > nav > ul > li > a {
+  text-decoration: none;
+  color: black;
+  padding: 0 3rem;
+}
+
+body > header > ul {
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  grid-row: 2/3;
+  grid-column: 4/5;
+}
+
+body > header > ul > li {
+  margin-right: 1.5vw;
+}
+
+body > header > ul > li > a {
+  text-decoration: none;
+  font-size: 1.1rem;
+  color: black;
+}
+
+body > header > ul > li > a > span:first-of-type {
+  font-size: 1.3rem;
+}
+
+body > header > ul > li > a > span:last-of-type {
+  display: none;
+  margin-left: 0.5vw;
+}
+
+body > header > ul > li > a:hover > span:last-of-type {
+  display: inline-block;
+}
+
+body > header > ul > li > a:hover > span:first-of-type {
+  font-size: 1.5rem;
+}
+
+body > header a:hover {
+  font-weight: bold;
+}
+
+body > header > nav a:hover {
+  padding: 1.5vh 2vw;
+  transition: all 0.3s ease-out;
+}
+
 article.book {
   border-radius: 5px;
   padding: 3vh 3vw 1.5vh 3vw;
@@ -232,179 +359,135 @@ article.book > footer > figure > figcaption {
     </article>
 
 */
-body > footer {
-  display: grid;
-  grid-template-columns: 0.1fr 0.8fr 0.1fr;
-  padding-bottom: 2rem;
+article.team-member {
+  border-radius: 50px;
+  padding: 2vh;
 }
 @media (prefers-color-scheme: light) {
-  body > footer {
-    /*responsive*/
-  }
-  body > footer .container {
-    grid-column: 2/3;
-    margin: auto;
-  }
-  body > footer .row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  body > footer .footer {
+  article.team-member {
     background-color: #fdebde;
-    padding: 70px 0;
-  }
-  body > footer .footer-col {
-    width: fit-content;
-    padding-right: 10vw;
-  }
-  body > footer .footer-col h4 {
-    font-size: 18px;
-    color: rgba(0, 0, 0, 0.9);
-    text-transform: capitalize;
-    margin-bottom: 35px;
-    font-weight: 500;
-    position: relative;
-  }
-  body > footer .footer-col h4::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    background-color: #881212;
-    height: 2px;
-    box-sizing: border-box;
-    width: 50px;
-  }
-  body > footer .footer-col ul li:not(:last-child) {
-    margin-bottom: 10px;
-  }
-  body > footer .footer-col ul li a {
-    font-size: 16px;
-    text-transform: capitalize;
-    color: rgba(0, 0, 0, 0.9);
-    text-decoration: none;
-    font-weight: 300;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  body > footer .footer-col ul li a:hover {
-    color: #881212;
-    padding-left: 8px;
-  }
-  body > footer .footer-col .social-links a {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: #881212;
-    margin: 0 10px 10px 0;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: #fdebde;
-    transition: all 0.5s ease;
-  }
-  body > footer .footer-col .social-links a:hover {
-    color: rgba(0, 0, 0, 0.9);
-    background-color: #ffffff;
-  }
-}
-@media (prefers-color-scheme: light) and (max-width: 767px) {
-  body > footer .footer-col {
-    width: 50%;
-    margin-bottom: 30px;
-  }
-}
-@media (prefers-color-scheme: light) and (max-width: 574px) {
-  body > footer .footer-col {
-    width: 100%;
+    color: black;
+    border-bottom: solid 2px #881212;
+    border-right: solid 2px #881212;
+    border-top: solid 1px #881212;
+    border-left: solid 1px #881212;
+    box-shadow: 4px 4px 4px 0 #881212;
   }
 }
 @media (prefers-color-scheme: dark) {
-  body > footer {
-    /*responsive*/
-  }
-  body > footer .container {
-    grid-column: 2/3;
-    margin: auto;
-  }
-  body > footer .row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  body > footer ul {
-    list-style: none;
-  }
-  body > footer .footer {
+  article.team-member {
     background-color: rgba(0, 0, 0, 0.9);
-    padding: 70px 0;
-  }
-  body > footer .footer-col {
-    width: fit-content;
-    padding-right: 10vw;
-  }
-  body > footer .footer-col h4 {
-    font-size: 18px;
     color: #fdebde;
-    text-transform: capitalize;
-    margin-bottom: 35px;
-    font-weight: 500;
-    position: relative;
-  }
-  body > footer .footer-col h4::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    background-color: #c22b2b;
-    height: 2px;
-    box-sizing: border-box;
-    width: 50px;
-  }
-  body > footer .footer-col ul li:not(:last-child) {
-    margin-bottom: 10px;
-  }
-  body > footer .footer-col ul li a {
-    font-size: 16px;
-    text-transform: capitalize;
-    color: #fdebde;
-    text-decoration: none;
-    font-weight: 300;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  body > footer .footer-col ul li a:hover {
-    color: #fdebde;
-    padding-left: 8px;
-  }
-  body > footer .footer-col .social-links a {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: #c22b2b;
-    margin: 0 10px 10px 0;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: #fdebde;
-    transition: all 0.5s ease;
-  }
-  body > footer .footer-col .social-links a:hover {
-    color: rgba(0, 0, 0, 0.9);
-    background-color: #ffffff;
+    border-bottom: solid 2px #c22b2b;
+    border-right: solid 2px #c22b2b;
+    border-top: solid 1px #c22b2b;
+    border-left: solid 1px #c22b2b;
+    box-shadow: 4px 4px 4px 0 #c22b2b;
   }
 }
-@media (prefers-color-scheme: dark) and (max-width: 767px) {
-  body > footer .footer-col {
-    width: 50%;
-    margin-bottom: 30px;
+article.team-member > header > figure {
+  max-width: 100%;
+}
+article.team-member > header > figure > img {
+  width: 100%;
+  border-radius: 50px;
+}
+article.team-member > header > figure > figcaption {
+  display: none;
+}
+article.team-member > header > h4 {
+  display: none;
+}
+article.team-member > section {
+  padding: 0.5vh;
+}
+article.team-member > section > h4 {
+  font-size: 1.7rem;
+  margin-bottom: 1vh;
+  text-align: center;
+}
+article.team-member > section > a {
+  display: block;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 1vh;
+  border-radius: 10px;
+  padding: 0.5vh;
+}
+@media (prefers-color-scheme: light) {
+  article.team-member > section > a {
+    color: #881212;
   }
 }
-@media (prefers-color-scheme: dark) and (max-width: 574px) {
-  body > footer .footer-col {
-    width: 100%;
+@media (prefers-color-scheme: dark) {
+  article.team-member > section > a {
+    color: #c22b2b;
   }
+}
+article.team-member > section > a > span {
+  margin-left: 4%;
+}
+article.team-member > section > ul {
+  padding: 1vh 0;
+}
+article.team-member > section > ul > li {
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin: 0.5vh 0;
+}
+article.team-member > section > ul > li > span {
+  margin-right: 0.5vw;
 }
 
+/*
+
+    <article class="book">
+        <header>
+            <figure>
+                <img src="" alt="">
+                <figcaption>Couverture du livre: "" de .</figcaption>
+            </figure>
+            <h4></h4>
+        </header>
+        <section>
+            <h4></h4>
+            <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+        </section>
+        <footer>
+            <a href="">Prix: <span>Ajouter au panier</span></a>
+            <figure>
+                <img src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+        </footer>
+    </article>
+
+*/
+/*                
+
+    <article class="team-member">
+        <header>
+            <figure>
+                <img src="assets/img/" alt="">
+                <figcaption>Un membre éminent de notre équipe.</figcaption>
+            </figure>
+            <h4>ID: </h4>
+        </header>
+        <section>
+            <h4>ID: </h4>
+            <a href="">En savoir plus<span class="fa-solid fa-user-plus"></span></a>
+            <ul>
+                <li><span class="fa-solid fa-square-check"></span></li>
+                <li><span class="fa-solid fa-square-check"></span></li>
+                <li><span class="fa-solid fa-square-check"></span></li>
+                <li><span class="fa-solid fa-quote-left"></span>""</li>
+            </ul>
+        </section>
+    </article>
+
+*/
 #home-page > main {
   display: grid;
   grid-template-columns: 0.1fr 0.8fr 0.1fr;
@@ -417,28 +500,22 @@ body > footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding-top: 10vh;
-  grid-row-gap: 5vh;
+  grid-row-gap: 2vh;
 }
 #home-page > main > section:not(:first-of-type) > h4 {
   grid-column: 1/4;
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
-  margin-bottom: 3vh;
+  padding-bottom: 3vh;
   font-weight: bold;
-  padding-bottom: 0.5vh;
-}
-@media (prefers-color-scheme: light) {
-  #home-page > main > section:not(:first-of-type) > h4 {
-    border-bottom: 2px solid #881212;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  #home-page > main > section:not(:first-of-type) > h4 {
-    border-bottom: 2px solid #c22b2b;
-  }
 }
 #home-page > main > section:not(:first-of-type) > .book {
   width: 50%;
+  align-self: center;
+  justify-self: center;
+}
+#home-page > main > section:not(:first-of-type) > .team-member {
+  width: 70%;
   align-self: center;
   justify-self: center;
 }
@@ -479,133 +556,6 @@ body > footer {
 }
 #home-page > main > section:first-of-type > figure > img {
   width: 90%;
-}
-
-.header-book {
-  display: grid;
-  grid-template-columns: 1fr 2fr 4fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  width: 100%;
-  min-height: 15vh;
-}
-@media (prefers-color-scheme: light) {
-  .header-book {
-    background-color: #fdebde;
-    box-shadow: 0px 2px 2px rgba(136, 18, 18, 0.5);
-  }
-  .header-book a {
-    color: rgba(0, 0, 0, 0.9);
-  }
-  .header-book a:hover {
-    color: #881212;
-  }
-  .header-book .dark-logo {
-    display: none;
-  }
-  .header-book nav a:hover {
-    border-bottom: solid 4px rgba(136, 18, 18, 0.7);
-    border-right: solid 5px rgba(136, 18, 18, 0.7);
-    border-top: solid 1px rgba(136, 18, 18, 0.1);
-    border-left: solid 1px rgba(136, 18, 18, 0.1);
-  }
-}
-@media (prefers-color-scheme: dark) {
-  .header-book {
-    box-shadow: 0px 2px 2px rgb(194, 43, 43);
-  }
-  .header-book a {
-    color: #fdebde;
-  }
-  .header-book a:hover {
-    color: #fdebde;
-  }
-  .header-book .light-logo {
-    display: none;
-  }
-  .header-book nav a:hover {
-    border-bottom: solid 4px #c22b2b;
-    border-right: solid 4px #c22b2b;
-  }
-}
-
-body > header > figure {
-  padding-left: 2vw;
-  grid-column: 2/3;
-  grid-row: 1/4;
-  max-height: 15vh;
-}
-
-body > header > figure > img {
-  height: 100%;
-}
-
-body > header > nav {
-  grid-column: 3/4;
-  display: flex;
-  flex-direction: space-evenly;
-  align-items: center;
-  justify-content: center;
-  grid-row: 2/3;
-}
-
-body > header > nav > ul {
-  display: flex;
-}
-
-body > header > nav > ul > li {
-  text-transform: uppercase;
-  font-size: 1.3rem;
-  font-weight: bold;
-}
-
-body > header > nav > ul > li > a {
-  text-decoration: none;
-  color: black;
-  padding: 0 3rem;
-}
-
-body > header > ul {
-  display: flex;
-  align-items: center;
-  justify-self: center;
-  grid-row: 2/3;
-  grid-column: 4/5;
-}
-
-body > header > ul > li {
-  margin-right: 1.5vw;
-}
-
-body > header > ul > li > a {
-  text-decoration: none;
-  font-size: 1.1rem;
-  color: black;
-}
-
-body > header > ul > li > a > span:first-of-type {
-  font-size: 1.3rem;
-}
-
-body > header > ul > li > a > span:last-of-type {
-  display: none;
-  margin-left: 0.5vw;
-}
-
-body > header > ul > li > a:hover > span:last-of-type {
-  display: inline-block;
-}
-
-body > header > ul > li > a:hover > span:first-of-type {
-  font-size: 1.5rem;
-}
-
-body > header a:hover {
-  font-weight: bold;
-}
-
-body > header > nav a:hover {
-  padding: 1.5vh 2vw;
-  transition: all 0.3s ease-out;
 }
 
 @media (prefers-color-scheme: dark) and (min-width: 811px) {
@@ -1429,6 +1379,179 @@ body > header > nav a:hover {
   body#single > main > section:last-of-type > section > section > table > tbody > tr > th {
     text-align: end;
     padding-bottom: 1.8rem;
+  }
+}
+
+body > footer {
+  display: grid;
+  grid-template-columns: 0.1fr 0.8fr 0.1fr;
+  padding-bottom: 2rem;
+}
+@media (prefers-color-scheme: light) {
+  body > footer {
+    /*responsive*/
+  }
+  body > footer .container {
+    grid-column: 2/3;
+    margin: auto;
+  }
+  body > footer .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  body > footer .footer {
+    background-color: #fdebde;
+    padding: 70px 0;
+  }
+  body > footer .footer-col {
+    width: fit-content;
+    padding-right: 10vw;
+  }
+  body > footer .footer-col h4 {
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.9);
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
+  }
+  body > footer .footer-col h4::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #881212;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+  }
+  body > footer .footer-col ul li:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  body > footer .footer-col ul li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: rgba(0, 0, 0, 0.9);
+    text-decoration: none;
+    font-weight: 300;
+    display: block;
+    transition: all 0.3s ease;
+  }
+  body > footer .footer-col ul li a:hover {
+    color: #881212;
+    padding-left: 8px;
+  }
+  body > footer .footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: #881212;
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #fdebde;
+    transition: all 0.5s ease;
+  }
+  body > footer .footer-col .social-links a:hover {
+    color: rgba(0, 0, 0, 0.9);
+    background-color: #ffffff;
+  }
+}
+@media (prefers-color-scheme: light) and (max-width: 767px) {
+  body > footer .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (prefers-color-scheme: light) and (max-width: 574px) {
+  body > footer .footer-col {
+    width: 100%;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  body > footer {
+    /*responsive*/
+  }
+  body > footer .container {
+    grid-column: 2/3;
+    margin: auto;
+  }
+  body > footer .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  body > footer ul {
+    list-style: none;
+  }
+  body > footer .footer {
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 70px 0;
+  }
+  body > footer .footer-col {
+    width: fit-content;
+    padding-right: 10vw;
+  }
+  body > footer .footer-col h4 {
+    font-size: 18px;
+    color: #fdebde;
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
+  }
+  body > footer .footer-col h4::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #c22b2b;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+  }
+  body > footer .footer-col ul li:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  body > footer .footer-col ul li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #fdebde;
+    text-decoration: none;
+    font-weight: 300;
+    display: block;
+    transition: all 0.3s ease;
+  }
+  body > footer .footer-col ul li a:hover {
+    color: #fdebde;
+    padding-left: 8px;
+  }
+  body > footer .footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: #c22b2b;
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #fdebde;
+    transition: all 0.5s ease;
+  }
+  body > footer .footer-col .social-links a:hover {
+    color: rgba(0, 0, 0, 0.9);
+    background-color: #ffffff;
+  }
+}
+@media (prefers-color-scheme: dark) and (max-width: 767px) {
+  body > footer .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (prefers-color-scheme: dark) and (max-width: 574px) {
+  body > footer .footer-col {
+    width: 100%;
   }
 }
 
