--- a/assets/styles/sass/_team-member.scss
+++ b/assets/styles/sass/_team-member.scss
@@ -34,7 +34,7 @@ article.team-member{
                 
             &>img{
                 
-                max-width: 100%;
+                width: 100%;
                 border-radius: 50px;
             }
             
