--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -1,11 +1,12 @@
 @import "reset";
 @import "vars";
 @import "classes";
-@import "book";
-@import "footer";
-@import "home-page";
 @import "header";
+@import "book";
+@import "team-member";
+@import "home-page";
 @import "single";
+@import "footer";
 html{
 
     font-family: 'Roboto', sans-serif;
