Soulignage des titres de sections

--- a/assets/styles/sass/_home-page.scss
+++ b/assets/styles/sass/_home-page.scss
@@ -23,6 +23,8 @@
                     text-transform:uppercase;
                     padding-bottom:3vh;
                     font-weight:bold;
+                    text-decoration: underline;
+                    text-underline-offset: 0.5em;
                 }
 
                 & > .book {
